Update home view

--- a/home/templates/home.html
+++ b/home/templates/home.html
@@ -11,7 +11,7 @@
      <div class="row" id="main-boxes">
     	<div class="col-md-4 col-sm-4">
         	<div class="box-style-2 green">
-            	<a href="all-courses.html" title="All Courses">
+            	<a href="courses" title="All Courses">
                 	<img src="{% static 'img/icon-home-course.png' %}" alt="">
                     <h3>Courses</h3>
                     <p>Lorem ipsum dolor sit amet, dicta aliquip ad vix, ne sit everti corpora. Qui cu eros feugiat, elitr iudico ad pri.</p>
@@ -44,126 +44,157 @@
 
 <div class="container">
     <div class="row">
-	<aside  class="col-md-4 col-sm-4">
+        <aside class="col-md-4 col-sm-4">
 
-    		<div class="box-style-1 ribbon borders">
+            <div class="box-style-1 ribbon borders">
 
-            <div class="feat">
-              <i class="icon-group icon-3x"></i>
-       		  <h3>Expert teachers</h3>
-              <p>An utinam reprimique duo, putant mandamus cu qui. Autem possim his cu, quodsi nominavi fabellas ut sit, mea ea ullum epicurei. </p>
+                <div class="feat">
+                    <i class="icon-group icon-3x"></i>
+                    <h3>Expert teachers</h3>
+                    <p>An utinam reprimique duo, putant mandamus cu qui. Autem possim his cu, quodsi nominavi fabellas
+                        ut sit, mea ea ullum epicurei. </p>
+                </div>
+
+                <hr class="double">
+
+                <div class="feat">
+                    <i class="icon-film icon-3x"></i>
+                    <h3>Video Courses</h3>
+                    <p>An utinam reprimique duo, putant mandamus cu qui. Autem possim his cu, quodsi nominavi fabellas
+                        ut sit, mea ea ullum epicurei. </p>
+                </div>
+
+                <hr class="double">
+
+                <div class="feat">
+                    <i class="icon-book icon-3x"></i>
+                    <h3>Library</h3>
+                    <p>An utinam reprimique duo, putant mandamus cu qui. Autem possim his cu, quodsi nominavi fabellas
+                        ut sit, mea ea ullum epicurei. </p>
+                </div>
+
+                <hr class="double">
+
+                <div class="feat last">
+                    <i class="icon-laptop icon-3x"></i>
+                    <h3>Online courses</h3>
+                    <p>An utinam reprimique duo, putant mandamus cu qui. Autem possim his cu, quodsi nominavi fabellas
+                        ut sit, mea ea ullum epicurei. </p>
+                </div>
+
             </div>
+            <p><a href="all-courses.html" title="All courses"><img src="{% static 'img/banner.jpg' %}" alt="Banner"
+                                                                   class="img-rounded img-responsive"></a></p>
+        </aside>
 
-            <hr class="double">
+        <section class="col-md-8 col-sm-8">
+            <div class="col-right">
+                <h2>Upcoming courses</h2>
+                <p>An utinam reprimique duo, putant mandamus cu qui. Autem possim his cu, quodsi nominavi fabellas ut
+                    sit, mea ea ullum epicurei. Saepe tantas ocurreret duo ea, has facilisi vulputate an. Priaeque
+                    iuvaret nominati et, ad mea clita numquam. Maluisset dissentiunt et per, dico liber erroribus vis
+                    te. Dolor consul graecis nec ut, scripta eruditi scriptorem et nam.</p>
+                <hr>
+                <div class="strip-lessons">
+                    <div class="row">
+                        <div class="col-md-3 col-xs-6">
+                            <div class="box-style-one borders"><img src="{% static 'img/lessons.png' %}" alt=""><h5>
+                                Intro</h5></div>
+                        </div>
+                        <div class="clearfix visible-xs-block"></div>
+                        <div class="col-md-9">
+                            <h4>Autem possim his</h4>
+                            <p>An utinam reprimique duo, putant mandamus cu qui. Autem possim his cu, quodsi nominavi
+                                fabellas ut sit, <strong>mea ea ullum epicurei</strong>. Saepe tantas ocurreret duo ea,
+                                has facilisi vulputate an. Pri aeque iuvaret nominati et, ad mea clita numquam. </p>
+                            <ul class="data-lessons">
+                                <li><i class="icon-time"></i>Duration: 3 hours</li>
+                                <li><i class="icon-film"></i><a class="fancybox-media"
+                                                                href="http://www.youtube.com/watch?v=pgk-719mTxM">Play
+                                    video</a></li>
+                                <li><i class="icon-cloud-download"></i><a href="#">Donwload prospect</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div><!-- End Strip course -->
 
-            <div class="feat">
-              <i class="icon-film icon-3x"></i>
-       		  <h3>Video Courses</h3>
-              <p>An utinam reprimique duo, putant mandamus cu qui. Autem possim his cu, quodsi nominavi fabellas ut sit, mea ea ullum epicurei. </p>
+
+                <div class="strip-lessons">
+                    <div class="row">
+                        <div class="col-md-3 col-xs-6">
+                            <div class="box-style-one borders"><img src="{% static 'img/teacher.jpg' %}" alt=""
+                                                                    class="picture img-responsive"><h5>Lesson one</h5>
+                            </div>
+                        </div>
+                        <div class="clearfix visible-xs-block"></div>
+                        <div class="col-md-9">
+                            <h4>Putant mandamus</h4>
+                            <p>An utinam reprimique duo, putant mandamus cu qui. Autem possim his cu, quodsi nominavi
+                                fabellas ut sit, <strong>mea ea ullum epicurei</strong>. Saepe tantas ocurreret duo ea,
+                                has facilisi vulputate an. Pri aeque iuvaret nominati et, ad mea clita numquam. </p>
+                            <ul class="data-lessons">
+                                <li><i class="icon-time"></i>Duration: 3 hours</li>
+                                <li><i class="icon-film"></i><a class="fancybox-media"
+                                                                href="http://www.youtube.com/watch?v=pgk-719mTxM">Play
+                                    video</a></li>
+                                <li><i class="icon-cloud-download"></i><a href="#">Donwload prospect</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div><!-- End Strip course -->
+
+                <div class="strip-lessons">
+                    <div class="row">
+                        <div class="col-md-3 col-xs-6">
+                            <div class="box-style-one borders"><img src="{% static 'img/teacher-2.jpg' %}" alt=""
+                                                                    class="picture img-responsive"><h5>Lesson two</h5>
+                            </div>
+                        </div>
+                        <div class="clearfix visible-xs-block"></div>
+                        <div class="col-md-9">
+                            <h4>Quodsi nominavi</h4>
+                            <p>An utinam reprimique duo, putant mandamus cu qui. Autem possim his cu, quodsi nominavi
+                                fabellas ut sit, <strong>mea ea ullum epicurei</strong>. Saepe tantas ocurreret duo ea,
+                                has facilisi vulputate an. Pri aeque iuvaret nominati et, ad mea clita numquam. </p>
+                            <ul class="data-lessons">
+                                <li><i class="icon-time"></i>Duration: 3 hours</li>
+                                <li><i class="icon-film"></i><a class="fancybox-media"
+                                                                href="http://www.youtube.com/watch?v=pgk-719mTxM">Play
+                                    video</a></li>
+                                <li><i class="icon-cloud-download"></i><a href="#">Donwload prospect</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div><!-- End Strip course -->
+
+                <div class="strip-lessons">
+                    <div class="row">
+                        <div class="col-md-3 col-xs-6">
+                            <div class="box-style-one borders"><img src="{% static 'img/teacher-3.jpg' %}" alt=""
+                                                                    class="picture img-responsive"><h5>Lesson three</h5>
+                            </div>
+                        </div>
+                        <div class="clearfix visible-xs-block"></div>
+                        <div class="col-md-9">
+                            <h4>Saepe tantas</h4>
+                            <p>An utinam reprimique duo, putant mandamus cu qui. Autem possim his cu, quodsi nominavi
+                                fabellas ut sit, <strong>mea ea ullum epicurei</strong>. Saepe tantas ocurreret duo ea,
+                                has facilisi vulputate an. Pri aeque iuvaret nominati et, ad mea clita numquam. </p>
+                            <ul class="data-lessons">
+                                <li><i class="icon-time"></i>Duration: 3 hours</li>
+                                <li><i class="icon-film"></i><a class="fancybox-media"
+                                                                href="http://www.youtube.com/watch?v=pgk-719mTxM">Play
+                                    video</a></li>
+                                <li><i class="icon-cloud-download"></i><a href="#">Donwload prospect</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div><!-- End Strip course -->
+
+                <p class="text-center"><a href="courses" class="button_large">View all courses </a></p>
+
             </div>
-
-            <hr class="double">
-
-            <div class="feat">
-              <i class="icon-book icon-3x"></i>
-       		  <h3>Library</h3>
-              <p>An utinam reprimique duo, putant mandamus cu qui. Autem possim his cu, quodsi nominavi fabellas ut sit, mea ea ullum epicurei. </p>
-            </div>
-
-            <hr class="double">
-
-            <div class="feat last">
-              <i class="icon-laptop icon-3x"></i>
-       		  <h3>Online courses</h3>
-              <p>An utinam reprimique duo, putant mandamus cu qui. Autem possim his cu, quodsi nominavi fabellas ut sit, mea ea ullum epicurei. </p>
-            </div>
-
-            </div>
-            <p><a  href="all-courses.html" title="All courses"><img src="{% static 'img/banner.jpg' %}" alt="Banner" class="img-rounded img-responsive" ></a></p>
-    </aside>
-
-<section class="col-md-8 col-sm-8">
-	<div class="col-right">
-    	<h2>Upcoming courses</h2>
-        <p>An utinam reprimique duo, putant mandamus cu qui. Autem possim his cu, quodsi nominavi fabellas ut sit, mea ea ullum epicurei. Saepe tantas ocurreret duo ea, has facilisi vulputate an. Priaeque iuvaret nominati et, ad mea clita numquam. Maluisset dissentiunt et per, dico liber erroribus vis te. Dolor consul graecis nec ut, scripta eruditi scriptorem et nam.</p>
-        <hr>
-           <div class="strip-lessons">
-        <div class="row">
-        	<div class="col-md-3 col-xs-6">
-            	<div class="box-style-one borders"><img src="{% static 'img/lessons.png' %}" alt=""><h5>Intro</h5></div>
-            </div>
-            <div class="clearfix visible-xs-block"></div>
-            <div class="col-md-9">
-            	<h4>Autem possim his</h4>
-                <p>An utinam reprimique duo, putant mandamus cu qui. Autem possim his cu, quodsi nominavi fabellas ut sit, <strong>mea ea ullum epicurei</strong>. Saepe tantas ocurreret duo ea, has facilisi vulputate an. Pri aeque iuvaret nominati et, ad mea clita numquam. </p>
-                <ul class="data-lessons">
-                	<li><i class="icon-time"></i>Duration: 3 hours</li>
-                    <li><i class="icon-film"></i><a class="fancybox-media" href="http://www.youtube.com/watch?v=pgk-719mTxM">Play video</a></li>
-                    <li><i class="icon-cloud-download"></i><a href="#">Donwload prospect</a></li>
-                </ul>
-            </div>
-        </div>
-        </div><!-- End Strip course -->
-
-
-        <div class="strip-lessons">
-        <div class="row">
-        	<div class="col-md-3 col-xs-6">
-            	<div class="box-style-one borders"><img src="{% static 'img/teacher.jpg' %}" alt="" class="picture img-responsive"><h5>Lesson one</h5></div>
-            </div>
-            <div class="clearfix visible-xs-block"></div>
-            <div class="col-md-9">
-            	<h4>Putant mandamus</h4>
-                <p>An utinam reprimique duo, putant mandamus cu qui. Autem possim his cu, quodsi nominavi fabellas ut sit, <strong>mea ea ullum epicurei</strong>. Saepe tantas ocurreret duo ea, has facilisi vulputate an. Pri aeque iuvaret nominati et, ad mea clita numquam. </p>
-                <ul class="data-lessons">
-                	<li><i class="icon-time"></i>Duration: 3 hours</li>
-                    <li><i class="icon-film"></i><a class="fancybox-media" href="http://www.youtube.com/watch?v=pgk-719mTxM">Play video</a></li>
-                    <li><i class="icon-cloud-download"></i><a href="#">Donwload prospect</a></li>
-                </ul>
-            </div>
-        </div>
-        </div><!-- End Strip course -->
-
-         <div class="strip-lessons">
-        <div class="row">
-        	<div class="col-md-3 col-xs-6">
-            	<div class="box-style-one borders"><img src="{% static 'img/teacher-2.jpg' %}" alt="" class="picture img-responsive"><h5>Lesson two</h5></div>
-            </div>
-            <div class="clearfix visible-xs-block"></div>
-            <div class="col-md-9">
-            	<h4>Quodsi nominavi</h4>
-                <p>An utinam reprimique duo, putant mandamus cu qui. Autem possim his cu, quodsi nominavi fabellas ut sit, <strong>mea ea ullum epicurei</strong>. Saepe tantas ocurreret duo ea, has facilisi vulputate an. Pri aeque iuvaret nominati et, ad mea clita numquam. </p>
-                <ul class="data-lessons">
-                	<li><i class="icon-time"></i>Duration: 3 hours</li>
-                    <li><i class="icon-film"></i><a class="fancybox-media" href="http://www.youtube.com/watch?v=pgk-719mTxM">Play video</a></li>
-                    <li><i class="icon-cloud-download"></i><a href="#">Donwload prospect</a></li>
-                </ul>
-            </div>
-        </div>
-        </div><!-- End Strip course -->
-
-        <div class="strip-lessons">
-        <div class="row">
-        	<div class="col-md-3 col-xs-6">
-            	<div class="box-style-one borders"><img src="{% static 'img/teacher-3.jpg' %}" alt="" class="picture img-responsive"><h5>Lesson three</h5></div>
-            </div>
-            <div class="clearfix visible-xs-block"></div>
-            <div class="col-md-9">
-            	<h4>Saepe tantas</h4>
-                <p>An utinam reprimique duo, putant mandamus cu qui. Autem possim his cu, quodsi nominavi fabellas ut sit, <strong>mea ea ullum epicurei</strong>. Saepe tantas ocurreret duo ea, has facilisi vulputate an. Pri aeque iuvaret nominati et, ad mea clita numquam. </p>
-                <ul class="data-lessons">
-                	<li><i class="icon-time"></i>Duration: 3 hours</li>
-                    <li><i class="icon-film"></i><a class="fancybox-media" href="http://www.youtube.com/watch?v=pgk-719mTxM">Play video</a></li>
-                    <li><i class="icon-cloud-download"></i><a href="#">Donwload prospect</a></li>
-                </ul>
-            </div>
-        </div>
-        </div><!-- End Strip course -->
-
-    	<p class="text-center"><a href="contact.html" class="button_large">View all courses </a></p>
-
-    </div>
-    </section>
+        </section>
   </div>
 </div><!-- end container-->
 
