--- a/registration/templates/login.html
+++ b/registration/templates/login.html
@@ -9,10 +9,10 @@
 
         <div class="row">
             <div class="col-md-12">
-                <h1>Contacts</h1>
+                <h1>Login</h1>
                 <ul class="breadcrumb">
-                    <li><a href="index.html">Home</a><span class="divider">/</span></li>
-                    <li class="active">Contact</li>
+                    <li><a href="/">Home</a><span class="divider"></span></li>
+                    <li class="active">Login</li>
                 </ul>
             </div>
             <!-- =========================Start Col left section ============================= -->
@@ -20,140 +20,39 @@
                 <div class="col-left">
                     <h3>Address</h3>
                     <ul>
-                        <li><i class="icon-home"></i> 11 Fifth Ave, Loftus - NEW JERSEY, US</li>
-                        <li><i class="icon-phone"></i> Telephone: + 61 (2) 8093 3400</li>
-                        <li><i class="icon-phone-sign"></i> Fax: +61 (2) 9542 3599</li>
-                        <li><i class="icon-envelope"></i> Email: <a href="#">submissions@domain.com</a></li>
+                        <li><i class="icon-home"></i> 11 Fifth Ave, - Sydney, AU</li>
+                        <li><i class="icon-phone"></i> Telephone: + 65 (2) 0000 0000</li>
+                        <li><i class="icon-phone-sign"></i> Fax: +65 (2) 0000 0000</li>
+                        <li><i class="icon-envelope"></i> Email: <a href="#">test@gmail.com</a></li>
                     </ul>
                     <hr>
-                    <iframe height="250"
-                            src="https://maps.google.it/maps?f=q&amp;source=s_q&amp;hl=it&amp;geocode=&amp;q=new+york&amp;sll=40.714353,-74.005973&amp;sspn=0.868126,2.422485&amp;ie=UTF8&amp;hq=&amp;hnear=New+York,+Stati+Uniti&amp;t=m&amp;z=10&amp;iwloc=A&amp;ll=40.714353,-74.005973&amp;output=embed"
-                            style="border:0;">
-                    </iframe>
+                    <iframe height="250" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d424145.87461596983!2d150.65176872550745!3d-33.8474026547801!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6b129838f39a743f%3A0x3017d681632a850!2sSydney+NSW%2C+Australia!5e0!3m2!1sen!2sbd!4v1488445424389" frameborder="0" style="border:0" allowfullscreen></iframe>
                     <br/>
-                    <small><a
-                            href="https://maps.google.it/maps?f=q&amp;source=embed&amp;hl=it&amp;geocode=&amp;q=new+york&amp;sll=40.714353,-74.005973&amp;sspn=0.868126,2.422485&amp;ie=UTF8&amp;hq=&amp;hnear=New+York,+Stati+Uniti&amp;t=m&amp;z=10&amp;iwloc=A&amp;ll=40.714353,-74.005973"
-                            style="text-align:left">View bigger</a></small>
-                    <hr>
-                    <p>Get directions writing your start point.</p>
-                    <form action="http://maps.google.com/maps" method="get" target="_blank">
-                        <input type="text" name="saddr" placeholder="Enter your location" class="form-control"/>
-                        <input type="hidden" name="daddr" value="New York, NY 11430"/>
-                        <!-- Write here your end point -->
-                        <input type="submit" value="Get directions" class=" button_medium"/>
-                    </form>
                 </div>
-                <p>
-                    <a href="all-courses.html" title="All courses"><img src="img/banner.jpg" alt="Banner"
-                                                                        class="img-rounded img-responsive"></a>
-                </p>
             </aside>
 
             <!-- =========================Start Col right section ============================= -->
             <section class="col-md-8 col-sm-8">
                 <div class="col-right">
-                    <p class="lead">
-                        An utinam reprimique duo, <strong>putant mandamus cu qui</strong>. Priaeque iuvaret nominati et,
-                        ad mea clita numquam. Maluisset dissentiunt et per, dico liber erroribus vis te. Dolor consul
-                        graecis nec ut, scripta eruditi scriptorem et nam.
-                    </p>
-                    <hr>
-                    <h4>General Enquire or Apply</h4>
-
+                    <h4>Login</h4>
                     <div id="message-contact"></div>
-                    <form method="post" action="assets/contact.php" id="contactform">
-                        <div class="row">
-                            <div class="col-md-6">
-                                <label>Name <span class="required">* </span></label>
-                                <input type="text" class="form-control ie7-margin" id="name_contact">
-                            </div>
-                            <div class="col-md-6">
-                                <label>Last name <span class="required">* </span></label>
-                                <input type="text" class="form-control ie7-margin" id="lastname_contact">
-                            </div>
-                        </div>
+                    <form method="post" action="" id="contactform">
                         <div class="row">
                             <div class="col-md-6">
                                 <label>Email <span class="required">* </span></label>
                                 <input type="email" id="email_contact" class="form-control ie7-margin">
                             </div>
                             <div class="col-md-6">
-                                <label>Phone <span class="required">* </span></label>
-                                <input type="text" id="phone_contact" class="form-control ie7-margin">
+                                <label>Password <span class="required">* </span></label>
+                                <input type="password" name="password" id="phone_contact" class="form-control ie7-margin">
                             </div>
                         </div>
-                        <div class="row">
-                            <div class="col-md-6">
-                                <label>Select a department</label>
-                                <select id="subject_contact" class="form-control">
-                                    <option value="Administration">Administration</option>
-                                    <option value="Admissions">Admissions</option>
-                                    <option value="Courses">Courses</option>
-                                    <option value="Apply">Apply</option>
-                                </select>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-md-12">
-                                <label>Message <span class="required">*</span></label>
-                                <textarea rows="5" id="message_contact" class="form-control"></textarea>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-md-3">
-                                <label><span class="required">*</span> Are you human? 3 + 1 =</label>
-                                <input type="text" id="verify_contact" class="form-control">
-                            </div>
-                            <div class="button-align col-md-9">
-                                <input type="submit" id="submit-contact" value="Submit" class=" button_medium">
-                            </div>
-                        </div>
+                        <input type="submit" id="submit-visit" value="Submit" class=" button_medium">
                         <hr>
                     </form>
-
-                    <h4>Plan a visit</h4>
-                    <div id="message-visit"></div>
-                    <form method="post" action="assets/visit.php" id="visit">
-                        <div class="row">
-                            <div class="col-md-6">
-                                <label>Name <span class="required">* </span></label>
-                                <input type="text" class="form-control ie7-margin" id="name_visit">
-                            </div>
-                            <div class="col-md-6">
-                                <label>Last name <span class="required">* </span></label>
-                                <input type="text" class="form-control ie7-margin" id="lastname_visit">
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-md-6">
-                                <label>Email <span class="required">* </span></label>
-                                <input type="email" id="email_visit" class="form-control ie7-margin">
-                            </div>
-                            <div class="col-md-6">
-                                <label>Phone <span class="required">* </span></label>
-                                <input type="text" id="phone_visit" class="form-control ie7-margin">
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-md-6">
-                                <div id="datetimepicker" class="input-append" style="position:relative;">
-                                    <label>Select a date <span class="required">* </span></label>
-                                    <input type="text" class=" dateinput form-control" id="date_visit">
-                                    <span class="add-on" style="position:absolute; top:34px; right:5px; cursor:pointer"><i
-                                            data-time-icon="icon-time" data-date-icon="icon-calendar"></i></span>
-                                </div>
-                            </div>
-                            <div class="col-md-6">
-                                <label><span class="required">*</span> Are you human? 3 + 1 =</label>
-                                <input type="text" id="verify_visit" class="form-control">
-                            </div>
-                        </div>
-                        <!-- end row-->
-                        <input type="submit" id="submit-visit" value="Submit" class=" button_medium">
-                    </form>
-
                 </div><!-- end col right-->
             </section>
+
         </div><!-- end row-->
     </div><!-- end container-->
 
