--- a/registration/templates/login.html
+++ b/registration/templates/login.html
@@ -6,54 +6,55 @@
 {% block body %}
 
     <div class="container">
-
         <div class="row">
-            <div class="col-md-12">
-                <h1>Login</h1>
-                <ul class="breadcrumb">
-                    <li><a href="/">Home</a><span class="divider"></span></li>
-                    <li class="active">Login</li>
-                </ul>
-            </div>
-            <!-- =========================Start Col left section ============================= -->
-            <aside class="col-md-4 col-sm-4">
-                <div class="col-left">
-                    <h3>Address</h3>
-                    <ul>
-                        <li><i class="icon-home"></i> 11 Fifth Ave, - Sydney, AU</li>
-                        <li><i class="icon-phone"></i> Telephone: + 65 (2) 0000 0000</li>
-                        <li><i class="icon-phone-sign"></i> Fax: +65 (2) 0000 0000</li>
-                        <li><i class="icon-envelope"></i> Email: <a href="#">test@gmail.com</a></li>
-                    </ul>
-                    <hr>
-                    <iframe height="250" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d424145.87461596983!2d150.65176872550745!3d-33.8474026547801!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6b129838f39a743f%3A0x3017d681632a850!2sSydney+NSW%2C+Australia!5e0!3m2!1sen!2sbd!4v1488445424389" frameborder="0" style="border:0" allowfullscreen></iframe>
-                    <br/>
+
+            <div class="main">
+
+                <h3>Please Log In, or <a href="/register">Sign Up</a></h3>
+                <div class="row">
+                    <div class="col-xs-12 col-sm-12 col-md-12">
+                        <a href="#" class="btn btn-lg btn-primary btn-block">Facebook</a>
+                    </div>
+{#                    <div class="col-xs-6 col-sm-6 col-md-6">#}
+{#                        <a href="#" class="btn btn-lg btn-info btn-block">Google</a>#}
+{#                    </div>#}
                 </div>
-            </aside>
+                <div class="login-or">
+                    <hr class="hr-or">
+                    <span class="span-or">or</span>
+                </div>
 
-            <!-- =========================Start Col right section ============================= -->
-            <section class="col-md-8 col-sm-8">
-                <div class="col-right">
-                    <h4>Login</h4>
-                    <div id="message-contact"></div>
-                    <form method="post" action="" id="contactform">
-                        <div class="row">
-                            <div class="col-md-6">
-                                <label>Email <span class="required">* </span></label>
-                                <input type="email" id="email_contact" class="form-control ie7-margin">
-                            </div>
-                            <div class="col-md-6">
-                                <label>Password <span class="required">* </span></label>
-                                <input type="password" name="password" id="phone_contact" class="form-control ie7-margin">
-                            </div>
-                        </div>
-                        <input type="submit" id="submit-visit" value="Submit" class=" button_medium">
-                        <hr>
-                    </form>
-                </div><!-- end col right-->
-            </section>
+                <form role="form">
+                    <div class="form-group">
+                        <label for="inputUsernameEmail">Email</label>
+                        <input type="email" name="email" class="form-control" id="inputUsernameEmail">
+                    </div>
+                    <div class="form-group">
+                        <a class="pull-right" href="#">Forgot password?</a>
+                        <label for="inputPassword">Password</label>
+                        <input type="password" name="password" class="form-control" id="inputPassword">
+                    </div>
+                    <div class="checkbox pull-right">
+                        <label>
+                            <input type="checkbox">
+                            Remember me
+                        </label>
+                    </div>
+                    <button type="submit" class="btn btn btn-primary">
+                        Log In
+                    </button>
+                </form>
+                <br>
+                <br>
+                <br>
+            </div>
 
-        </div><!-- end row-->
-    </div><!-- end container-->
+        </div>
+    </div>
+
+    {% block script %}
+        <link rel="stylesheet" href="{% static 'css/login.css' %}">
+    {% endblock %}
 
 {% endblock %}
+
