--- a/registration/templates/register.html
+++ b/registration/templates/register.html
@@ -9,10 +9,10 @@
 
         <div class="row">
             <div class="col-md-12">
-                <h1>Login</h1>
+                <h1>Registration</h1>
                 <ul class="breadcrumb">
                     <li><a href="/">Home</a><span class="divider"></span></li>
-                    <li class="active">Login</li>
+                    <li class="active">Registration</li>
                 </ul>
             </div>
             <!-- =========================Start Col left section ============================= -->
@@ -39,98 +39,50 @@
             <!-- =========================Start Col right section ============================= -->
             <section class="col-md-8 col-sm-8">
                 <div class="col-right">
-                    <h4>Login</h4>
+                    <h4>Registration</h4>
 
                     <div id="message-contact"></div>
                     <form method="post" action="" id="contactform">
                         <div class="row">
                             <div class="col-md-6">
-                                <label>Name <span class="required">* </span></label>
-                                <input type="text" class="form-control ie7-margin" id="name_contact">
+                                <label>Username <span class="required">* </span></label>
+                                <input type="text" name="username" id="email_contact" class="form-control ie7-margin" placeholder="Username">
+                            </div>
+                             <div class="col-md-6">
+                                <label>Email <span class="required">* </span></label>
+                                <input type="email" name="email" id="email_contact" class="form-control ie7-margin" placeholder="Email">
+                            </div>
+                        </div>
+
+                        <div class="row">
+                            <div class="col-md-6">
+                                <label>First Name <span class="required">* </span></label>
+                                <input type="text" name="firstname" class="form-control ie7-margin" id="name_contact" placeholder="First Name">
                             </div>
                             <div class="col-md-6">
                                 <label>Last name <span class="required">* </span></label>
-                                <input type="text" class="form-control ie7-margin" id="lastname_contact">
+                                <input type="text" name="lastname" class="form-control ie7-margin" id="lastname_contact" placeholder="Last Name">
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-md-6">
-                                <label>Email <span class="required">* </span></label>
-                                <input type="email" id="email_contact" class="form-control ie7-margin">
+                                <label>Password <span class="required">* </span></label>
+                                <input type="password" name="password" class="form-control ie7-margin" id="lastname_contact">
                             </div>
                             <div class="col-md-6">
-                                <label>Phone <span class="required">* </span></label>
-                                <input type="text" id="phone_contact" class="form-control ie7-margin">
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-md-6">
-                                <label>Select a department</label>
-                                <select id="subject_contact" class="form-control">
-                                    <option value="Administration">Administration</option>
-                                    <option value="Admissions">Admissions</option>
-                                    <option value="Courses">Courses</option>
-                                    <option value="Apply">Apply</option>
-                                </select>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-md-12">
-                                <label>Message <span class="required">*</span></label>
-                                <textarea rows="5" id="message_contact" class="form-control"></textarea>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-md-3">
                                 <label><span class="required">*</span> Are you human? 3 + 1 =</label>
                                 <input type="text" id="verify_contact" class="form-control">
                             </div>
+
+                        </div>
+
+                        <div class="row">
+                            <div class="col-md-3"></div>
                             <div class="button-align col-md-9">
                                 <input type="submit" id="submit-contact" value="Submit" class=" button_medium">
                             </div>
                         </div>
                         <hr>
-                    </form>
-
-                    <h4>Plan a visit</h4>
-                    <div id="message-visit"></div>
-                    <form method="post" action="" id="visit">
-                        <div class="row">
-                            <div class="col-md-6">
-                                <label>Name <span class="required">* </span></label>
-                                <input type="text" class="form-control ie7-margin" id="name_visit">
-                            </div>
-                            <div class="col-md-6">
-                                <label>Last name <span class="required">* </span></label>
-                                <input type="text" class="form-control ie7-margin" id="lastname_visit">
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-md-6">
-                                <label>Email <span class="required">* </span></label>
-                                <input type="email" id="email_visit" class="form-control ie7-margin">
-                            </div>
-                            <div class="col-md-6">
-                                <label>Phone <span class="required">* </span></label>
-                                <input type="text" id="phone_visit" class="form-control ie7-margin">
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-md-6">
-                                <div id="datetimepicker" class="input-append" style="position:relative;">
-                                    <label>Select a date <span class="required">* </span></label>
-                                    <input type="text" class=" dateinput form-control" id="date_visit">
-                                    <span class="add-on" style="position:absolute; top:34px; right:5px; cursor:pointer"><i
-                                            data-time-icon="icon-time" data-date-icon="icon-calendar"></i></span>
-                                </div>
-                            </div>
-                            <div class="col-md-6">
-                                <label><span class="required">*</span> Are you human? 3 + 1 =</label>
-                                <input type="text" id="verify_visit" class="form-control">
-                            </div>
-                        </div>
-                        <!-- end row-->
-                        <input type="submit" id="submit-visit" value="Submit" class=" button_medium">
                     </form>
 
                 </div><!-- end col right-->
