--- a/home/templates/master.html
+++ b/home/templates/master.html
@@ -111,7 +111,7 @@
                     scripta eruditi scriptorem et nam.</p>
 
                 <div id="message-newsletter"></div>
-                <form method="post" action="assets/newsletter.php" name="newsletter" id="newsletter"
+                <form method="post" action="" name="newsletter" id="newsletter"
                       class="form-inline">
                     <input name="email_newsletter" id="email_newsletter" type="email" value="" placeholder="Your Email"
                            class="form-control">
@@ -153,7 +153,6 @@
 <!-- OTHER JS -->
 <script src="{% static 'js/bootstrap.js' %}"></script>
 <script src="{% static 'js/functions.js' %}"></script>
-<script src="{% static 'assets/validate.js' %}"></script>
 
 <!-- FANCYBOX -->
 <script src="{% static 'js/fancybox/source/jquery.fancybox.pack.js' %}" type="text/javascript"></script>
