--- a/registration/templates/login.html
+++ b/registration/templates/login.html
@@ -15,19 +15,25 @@
                     <div class="col-xs-12 col-sm-12 col-md-12">
                         <a href="#" class="btn btn-lg btn-primary btn-block">Facebook</a>
                     </div>
-{#                    <div class="col-xs-6 col-sm-6 col-md-6">#}
-{#                        <a href="#" class="btn btn-lg btn-info btn-block">Google</a>#}
-{#                    </div>#}
                 </div>
                 <div class="login-or">
                     <hr class="hr-or">
                     <span class="span-or">or</span>
                 </div>
 
-                <form role="form">
+                {% if messages %}
+                    {% for msg in messages %}
+                        <p class="alert alert-success">{{ msg.message }}</p>
+                    {% endfor %}
+                {% endif %}
+
+                <form role="form" action="{% url 'login_user' %}" method="post">
+
+                    {% csrf_token %}
+
                     <div class="form-group">
-                        <label for="inputUsernameEmail">Email</label>
-                        <input type="email" name="email" class="form-control" id="inputUsernameEmail">
+                        <label for="inputUsernameEmail">Username</label>
+                        <input type="text" name="username" class="form-control" id="inputUsernameEmail">
                     </div>
                     <div class="form-group">
                         <a class="pull-right" href="#">Forgot password?</a>
