--- a/home/templates/menu.html
+++ b/home/templates/menu.html
@@ -305,6 +305,27 @@
                     </div><!-- End row-->
                 </div><!-- End Item Container -->
             </li><!-- End Item -->
+
+            {% if user.is_authenticated %}
+                <li class="drop-normal"><a href="javascript:void(0)" class="drop-down">{{ user.username }}</a>
+                    <div class="drop-down-container normal">
+                        <ul>
+                            <li><a href="" title="">Profile</a></li>
+                            <li><a href="" title="Course detail">Logout</a></li>
+                        </ul>
+                    </div><!-- End dropdown normal -->
+                </li>
+            {% else %}
+                 <li class="drop-normal"><a href="javascript:void(0)" class="drop-down">My Account</a>
+                    <div class="drop-down-container normal">
+                        <ul>
+                            <li><a href="{% url 'login' %}" title="Login">Login</a></li>
+                        </ul>
+                    </div><!-- End dropdown normal -->
+                </li>
+
+            {% endif %}
+
         </ul><!-- End Mega Menu -->
     </div>
 </nav><!-- /navbar -->
