Install debug toolbar

--- a/home/templates/home.html
+++ b/home/templates/home.html
@@ -96,101 +96,35 @@
                     iuvaret nominati et, ad mea clita numquam. Maluisset dissentiunt et per, dico liber erroribus vis
                     te. Dolor consul graecis nec ut, scripta eruditi scriptorem et nam.</p>
                 <hr>
-                <div class="strip-lessons">
-                    <div class="row">
-                        <div class="col-md-3 col-xs-6">
-                            <div class="box-style-one borders"><img src="{% static 'img/lessons.png' %}" alt=""><h5>
-                                Intro</h5></div>
-                        </div>
-                        <div class="clearfix visible-xs-block"></div>
-                        <div class="col-md-9">
-                            <h4>Autem possim his</h4>
-                            <p>An utinam reprimique duo, putant mandamus cu qui. Autem possim his cu, quodsi nominavi
-                                fabellas ut sit, <strong>mea ea ullum epicurei</strong>. Saepe tantas ocurreret duo ea,
-                                has facilisi vulputate an. Pri aeque iuvaret nominati et, ad mea clita numquam. </p>
-                            <ul class="data-lessons">
-                                <li><i class="icon-time"></i>Duration: 3 hours</li>
-                                <li><i class="icon-film"></i><a class="fancybox-media"
-                                                                href="http://www.youtube.com/watch?v=pgk-719mTxM">Play
-                                    video</a></li>
-                                <li><i class="icon-cloud-download"></i><a href="#">Donwload prospect</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div><!-- End Strip course -->
-
-
-                <div class="strip-lessons">
-                    <div class="row">
-                        <div class="col-md-3 col-xs-6">
-                            <div class="box-style-one borders"><img src="{% static 'img/teacher.jpg' %}" alt=""
-                                                                    class="picture img-responsive"><h5>Lesson one</h5>
+                {% if courses %}
+                    {% for course in courses %}
+                        <div class="strip-lessons">
+                            <div class="row">
+                                <div class="col-md-3 col-xs-6">
+                                    <div class="box-style-one borders">
+                                        <img src="{% static 'img/lessons.png' %}" alt="">
+                                        <h5>Intro</h5>
+                                    </div>
+                                </div>
+                                <div class="clearfix visible-xs-block"></div>
+                                <div class="col-md-9">
+                                    <h4>{{ course.title }}</h4>
+                                    <p>{{ course.details | safe }}</p>
+                                    <ul class="data-lessons">
+                                        <li><i class="icon-time"></i>{{ course.duration }}</li>
+                                        <li><i class="icon-film"></i>
+                                            <a class="fancybox-media" href="http://www.youtube.com/watch?v=pgk-719mTxM">Playvideo</a>
+                                        </li>
+                                        <li><i class="icon-cloud-download"></i><a href="#">Donwload prospect</a></li>
+                                    </ul>
+                                </div>
                             </div>
-                        </div>
-                        <div class="clearfix visible-xs-block"></div>
-                        <div class="col-md-9">
-                            <h4>Putant mandamus</h4>
-                            <p>An utinam reprimique duo, putant mandamus cu qui. Autem possim his cu, quodsi nominavi
-                                fabellas ut sit, <strong>mea ea ullum epicurei</strong>. Saepe tantas ocurreret duo ea,
-                                has facilisi vulputate an. Pri aeque iuvaret nominati et, ad mea clita numquam. </p>
-                            <ul class="data-lessons">
-                                <li><i class="icon-time"></i>Duration: 3 hours</li>
-                                <li><i class="icon-film"></i><a class="fancybox-media"
-                                                                href="http://www.youtube.com/watch?v=pgk-719mTxM">Play
-                                    video</a></li>
-                                <li><i class="icon-cloud-download"></i><a href="#">Donwload prospect</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div><!-- End Strip course -->
+                        </div><!-- End Strip course -->
+                    {% endfor %}
 
-                <div class="strip-lessons">
-                    <div class="row">
-                        <div class="col-md-3 col-xs-6">
-                            <div class="box-style-one borders"><img src="{% static 'img/teacher-2.jpg' %}" alt=""
-                                                                    class="picture img-responsive"><h5>Lesson two</h5>
-                            </div>
-                        </div>
-                        <div class="clearfix visible-xs-block"></div>
-                        <div class="col-md-9">
-                            <h4>Quodsi nominavi</h4>
-                            <p>An utinam reprimique duo, putant mandamus cu qui. Autem possim his cu, quodsi nominavi
-                                fabellas ut sit, <strong>mea ea ullum epicurei</strong>. Saepe tantas ocurreret duo ea,
-                                has facilisi vulputate an. Pri aeque iuvaret nominati et, ad mea clita numquam. </p>
-                            <ul class="data-lessons">
-                                <li><i class="icon-time"></i>Duration: 3 hours</li>
-                                <li><i class="icon-film"></i><a class="fancybox-media"
-                                                                href="http://www.youtube.com/watch?v=pgk-719mTxM">Play
-                                    video</a></li>
-                                <li><i class="icon-cloud-download"></i><a href="#">Donwload prospect</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div><!-- End Strip course -->
-
-                <div class="strip-lessons">
-                    <div class="row">
-                        <div class="col-md-3 col-xs-6">
-                            <div class="box-style-one borders"><img src="{% static 'img/teacher-3.jpg' %}" alt=""
-                                                                    class="picture img-responsive"><h5>Lesson three</h5>
-                            </div>
-                        </div>
-                        <div class="clearfix visible-xs-block"></div>
-                        <div class="col-md-9">
-                            <h4>Saepe tantas</h4>
-                            <p>An utinam reprimique duo, putant mandamus cu qui. Autem possim his cu, quodsi nominavi
-                                fabellas ut sit, <strong>mea ea ullum epicurei</strong>. Saepe tantas ocurreret duo ea,
-                                has facilisi vulputate an. Pri aeque iuvaret nominati et, ad mea clita numquam. </p>
-                            <ul class="data-lessons">
-                                <li><i class="icon-time"></i>Duration: 3 hours</li>
-                                <li><i class="icon-film"></i><a class="fancybox-media"
-                                                                href="http://www.youtube.com/watch?v=pgk-719mTxM">Play
-                                    video</a></li>
-                                <li><i class="icon-cloud-download"></i><a href="#">Donwload prospect</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div><!-- End Strip course -->
+                {% else %}
+                    <p>No course</p>
+                {% endif %}
 
                 <p class="text-center"><a href="courses" class="button_large">View all courses </a></p>
 
