Show courses in all course page

--- a/courses/templates/courses.html
+++ b/courses/templates/courses.html
@@ -45,8 +45,10 @@
                 <div class="col-right">
                     <div class="main-img">
                         <img src="{% static 'img/pic-2.jpg' %}" alt="" class="img-responsive">
-                        <p class="lead">Tibique dolores adversarium ne vel. At vide errem duo, vis luptatum menandri
-                            ullamcorper id. </p>
+                        <p class="lead">
+                            Tibique dolores adversarium ne vel. At vide errem duo, vis luptatum menandri
+                            ullamcorper id.
+                        </p>
                     </div>
 
                     <div class="strip-courses">
